--- a/index.html
+++ b/index.html
@@ -1,1 +1,74 @@
+<!doctype html>
+<html lang="ru">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Sunburst Dashboard — Операционные риски</title>
+
+  <!-- Google font -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+
+  <!-- D3 v7 -->
+  <script src="https://d3js.org/d3.v7.min.js"></script>
+
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <div class="app">
+    <header class="app-header">
+      <div class="title">
+        <h1>Операционные риски</h1>
+        <div class="subtitle muted">Сводный дашборд — обзор проблемных зон</div>
+      </div>
+
+      <div class="filters">
+        <div class="period-toggle" role="tablist" aria-label="Период">
+          <button class="period active" data-period="year">Год</button>
+          <button class="period" data-period="quarter">Квартал</button>
+          <button class="period" data-period="month">Месяц</button>
+          <button class="period" data-period="week">Неделя</button>
+        </div>
+
+        <div class="date-range">
+          <input id="date-from" type="date" title="С" />
+          <span class="dash">—</span>
+          <input id="date-to" type="date" title="По" />
+          <button id="apply-filters" class="btn small">Применить</button>
+        </div>
+      </div>
+    </header>
+
+    <main class="layout">
+      <section class="left">
+        <div id="chart-wrap" class="chart-wrap" aria-label="Sunburst chart container">
+          <!-- svg injected here -->
+        </div>
+        <div id="tooltip" class="tooltip" style="display:none;"></div>
+      </section>
+
+      <aside class="right">
+        <div class="details-top">
+          <button id="back-btn" class="btn-back" title="Вернуться" aria-label="Назад" style="display:none">← Назад</button>
+          <div>
+            <h2 id="detail-title">Выберите сегмент</h2>
+            <div id="detail-subtitle" class="muted">Кликните сегмент слева</div>
+          </div>
+        </div>
+
+        <div id="details" class="details">
+          <!-- widgets injected by details.js -->
+        </div>
+      </aside>
+    </main>
+
+    <footer class="app-footer muted">
+      Прототип • D3 Sunburst • Цвета: очень высокий — тёмно-красный, высокий — красный, средний — жёлтый, низкий — серый.
+    </footer>
+  </div>
+
+  <script src="data.js"></script>
+  <script src="details.js"></script>
+  <script src="script.js"></script>
+</body>
+</html>
 
